# scrypt

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c  scrypt.c  scrypt.h
test/: CMakeLists.txt  check-scrypt.c
